--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
             </span>
           </div>
           <div>
-            <button type="submit">
-              Calculate Remaining Calories
-            </button>
+            <button type="submit">Calculate Remaining Calories</button>
             <button type="button" id="clear">Clear</button>
           </div>
         </form>
